# xgdatatools

./: Docs.txt  README.md  pyproject.toml  xgstruct.py
src/xgdatatools/: extractxgdata.py  xgimport.py  xgstruct.py  xgutils.py  xgzarc.py
