[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xgdatatools"
version = "0.0.1"
authors = [{ name = "Masahiro Kisono", email = "mkisono@gmail.com" }]
description = "xgdatatools package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mkisono/xgdatatools"
Issues = "https://github.com/mkisono/xgdatatools/issues"
